--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 <hl>HELLO WORLD</hl>
-<p>Im hosted with GitHubPages.</p>
+<p>This Web Data Connector is hosted from 3DVES GitHubPages.</p>
 <a href="MadMoneyScraper.html">Here is the MadMoneyScraper WDC</a>
 </body>
 </html>
